finalized service and controller rewrites, still needs tests